# GAZ-control-unit

./: sdkconfig
libs/u8g2-hal/src/: u8g2_esp32_hal.c
main/: CMakeLists.txt  hardware.h  main.cpp
main/ADC/: ADC.cpp  ADC.h
main/Brake/: Brake.cpp  Brake.h
main/BrushedMotor/: BrushedMotor.cpp  BrushedMotor.h
main/Buttons/: Buttons.cpp  Buttons.h
main/Clutch/: Clutch.cpp  Clutch.h
main/CruiseControl/: CruiseControl.cpp  CruiseControl.h
main/E-Stop/: Estop.cpp  Estop.h
main/Engine/: Engine.cpp  Engine.h
main/Ethernet/: Ethernet.cpp
main/Gearbox/: Gearbox.cpp  Gearbox.h
main/LCD/: LCD.cpp  LCD.h
main/LMP/: LMP.cpp  LMP.h
main/Motors/: Motors.cpp  Motors.h
main/NVStorage/: NVStorage.cpp  NVStorage.h
main/NeiryMetrics/: NeiryMetrics.cpp  NeiryMetrics.h
main/PCCommunication/: PCCommunication.cpp
main/RPC/: RPCClient.cpp  RPCClient.h  RPCCommunication.cpp  RPCCommunication.h
main/Signals/: Signals.cpp  Signals.h
main/StateMachine/: StateMachine.cpp  StateMachine.h
main/Throttle/: Throttle.cpp  Throttle.h
main/UDP-Server/: udp_server.cpp  udp_server.h
main/Webserver/: P_brake.h  P_clutch.h  Webserver.cpp  Webserver.h  web_funcs.cpp  web_funcs.h
main/Wheel/: Wheel.cpp  Wheel.h
