idf_component_register(
    SRC_DIRS "." "CruiseControl" "ADC" "Brake" "BrushedMotor" "BTS7960" "Clutch" "Engine" "E-Stop" "Ethernet" "Gearbox" "LCD" "../libs" "../libs/FlySkyIBus" "../libs/u8g2/cppsrc" 
    "../libs/u8g2/csrc" "../libs/u8g2-hal/src" "Motors" "NVStorage" "PCCommunication" "PID" "../libs" "Buttons" "RPC" "StateMachine" "Throttle" "UDP-Server" "Webserver" "Wheel" "Signals" "LMP"
    INCLUDE_DIRS "." "CruiseControl" "ADC" "Brake" "BrushedMotor" "BTS7960" "Clutch" "Engine" "E-Stop" "Ethernet" "Gearbox" "LCD" "../libs" "../libs/FlySkyIBus" "../libs/u8g2/cppsrc" 
    "../libs/u8g2/csrc" "../libs/u8g2-hal/include" "Motors" "NVStorage" "PCCommunication" "PID" "../libs" "Buttons" "RPC" "StateMachine" "Throttle" "UDP-Server" "Webserver" "Wheel" "Signals" "LMP"
)
