idf_component_register(
    SRC_DIRS "." "CruiseControl" "ADC" "Brake" "BrushedMotor" "BTS7960" "Buttons" "Clutch" "Engine" "E-Stop" "Ethernet" "Gearbox" "LCD" "../libs" "../libs/FlySkyIBus" 
    "../libs/u8g2/cppsrc" "../libs/u8g2/csrc" "../libs/u8g2-hal/src" "Motors" "NeiryMetrics" "NVStorage" "PCCommunication" "PID" "../libs" "LMP" "RPC" "Signals" 
    "StateMachine" "Throttle" "UDP-Server" "Webserver" "Wheel"
    INCLUDE_DIRS "." "CruiseControl" "ADC" "Brake" "BrushedMotor" "BTS7960" "Buttons" "Clutch" "Engine" "E-Stop" "Ethernet" "Gearbox" "LCD" "../libs" 
    "../libs/FlySkyIBus" "../libs/u8g2/cppsrc" "../libs/u8g2/csrc" "../libs/u8g2-hal/include" "Motors" "NeiryMetrics" "NVStorage" "PCCommunication" "PID" "../libs" 
    "LMP" "RPC" "Signals" "StateMachine" "Throttle" "UDP-Server" "Webserver" "Wheel"
)